test/functions/ferguson/set-const-this.good
set-const-this.chpl:4: In function 'f':
set-const-this.chpl:6: error: illegal lvalue in assignment
